--- a/404.html
+++ b/404.html
@@ -36,6 +36,7 @@
 		<span class="servus">			
 			<div class="con">
 				<img src="img/Servus Image/question.png" alt="">
+				<a class="eggs"onclick="window.location.href = './eggs.html';"> </a>
 			</div>
 		</span>
 		<p class="p">4</p>
@@ -50,26 +51,6 @@
 <iframe style="width:0;height:0;border:0; border:none;" scrolling="no" frameborder="no" allow="autoplay" src="https://instaud.io/_/2Vvu.mp3"></iframe>
 
 <!-- END ERROR 404 -->
-
-<!-- Loader -->
-<div id="preloader">
-	<div id="loader"></div>
-  </div>
-  <script>
-	document.onreadystatechange = function () {
-  var state = document.readyState
-  if (state == 'interactive') {
-       document.getElementById('contents').style.visibility="hidden";
-  } else if (state == 'complete') {
-      setTimeout(function(){
-         document.getElementById('interactive');
-         document.getElementById('preloader').style.visibility="hidden";
-         document.getElementById('contents').style.visibility="visible";
-      },1000);
-  }
-}
-  </script>
-<!-- End of Loader -->
 
 <footer class="mastfoot my-3">
     	<div class="inner container">
