--- a/eggs.html
+++ b/eggs.html
@@ -28,7 +28,7 @@
     <div class="card">
         <div class="content">
           <div class="front">
-            <img src="/img/Servus Image/nrml.png">
+            <img src="./img/Servus Image/nrml.png">
           </div>
           <div class="back">
             <a class="discord_eggs" href= 'https://discord.gg/msnHqV9wN3'>Discord secret</a>
